<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".Pay">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="104dp"
        android:text="@string/pay"
        android:textColor="@color/accentColors"
        android:textColorHint="@color/accentColors"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.085">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total Amount :"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_margin="8dp"
            android:background="@color/secondary"
            android:ems="10"
            android:hint="@string/totprice"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/cardno"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@color/secondary"
            android:ems="10"
            android:hint="@string/hintcardno"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/cvc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@color/secondary"
            android:ems="10"
            android:hint="@string/hintcvc"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@color/secondary"
            android:ems="10"
            android:hint="@string/hintdate"
            android:inputType="text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="50dp"
            android:text="@string/paybutton"
            android:textSize="25sp" />

        <Button
            android:id="@+id/payback"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="92dp"
            android:text="@string/Back"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="108dp"
        android:layout_height="94dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vehicals" />


</androidx.constraintlayout.widget.ConstraintLayout>