<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".Resivarion">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/booknow"
        android:textColor="@color/accentColors"
        android:textColorHint="@color/accentColors"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <EditText
            android:id="@+id/ownername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@color/secondary"
            android:ems="10"
            android:hint="@string/hintownername"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@color/secondary"
            android:ems="10"
            android:hint="@string/hintphone"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/noofdates"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@color/secondary"
            android:ems="10"
            android:hint="@string/hintnoofdates"
            android:inputType="text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/resivationbtn"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="50dp"
            android:text="@string/booknow"
            android:textSize="25sp" />

        <Button
            android:id="@+id/reseveback"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:text="@string/Back"
            android:textSize="24sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>